# django-China-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
api/apps/comments/: apps.py  models.py  serializers.py  signals.py  views.py
api/apps/comments/migrations/: 0001_initial.py
api/apps/comments/tests/: factories.py  test_signals.py  test_views.py
api/apps/core/: receivers.py
api/apps/invitations/: admin.py  apps.py  models.py
api/apps/invitations/migrations/: 0001_initial.py
api/apps/invitations/tests/: factories.py  test_admins.py  test_models.py
api/apps/nodes/: admin.py  apps.py  models.py  serializers.py  views.py
api/apps/nodes/migrations/: 0001_initial.py  0002_notes_parent.py  0003_auto_20211218_1448.py  0004_alter_node_options.py
api/apps/nodes/tests/: __init__.py  factories.py
api/apps/notifications/: apps.py  models.py  serializers.py  signals.py  views.py
api/apps/notifications/migrations/: 0001_initial.py  0002_auto_20220317_1139.py
api/apps/notifications/tests/: test_signals.py  test_views.py
api/apps/posts/: apps.py  models.py  serializers.py  views.py
api/apps/posts/migrations/: 0001_initial.py  0002_alter_post_views.py
api/apps/posts/tests/: __init__.py  factories.py  test_views.py
api/apps/titles/: admin.py  models.py
api/apps/titles/migrations/: 0001_initial.py
api/apps/titles/tests/: factories.py  test_models.py
api/apps/users/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
api/apps/users/common/: __init__.py  response.py
api/apps/users/migrations/: 0001_initial.py  0002_auto_20220410_1336.py
api/apps/users/tests/: test_serializers.py  test_views.py
config/: api_router.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py  test.py
devops/ansible/: hosts.yml  staging.yml
devops/ansible/group_vars/: all.yml  staging.yml
devops/ansible/roles/mysql/tasks/: main.yml
devops/ansible/roles/nginx/tasks/: main.yml
devops/ansible/roles/nginx/templates/: django-China-api.conf.j2
devops/ansible/roles/project/defaults/: main.yml
devops/ansible/roles/project/tasks/: deps.yml  envfile.yml  main.yml  management.yml  repo.yml
devops/ansible/roles/project/templates/: django-China-api.env.j2
(+4 files in other folders)
