[tool.poetry]
name = "django-china-api"
version = "0.1.0"
description = ""
authors = ["jkc <1044500650@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4"
django = "^3.2.8"
djangorestframework = "^3.12.4"
django-extensions = "^3.1.3"
drf-extensions = "^0.7.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.2"
pytest-django = "^4.4.0"
django-test-plus = "^2.2.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
